Clean up QQuickShaderEffectPrivate in ~QQuickShaderEffect

When building with sanitize undefined for webassembly, and running the
test reproducer from QTBUG-124152 the following comes up.

(parts of call stack bottom->top)
1) QQuickShaderEffect::~QQuickShaderEffect()
...
2) QObject::~QObject()
...
3) QQuickShaderEffectPrivate::~QQuickShaderEffectPrivate()
and the private destructor accesses Q_Q which refers to
QQuickShaderEffect which has already been deleted

As to what the exact consequences are, this is unknown, but
might be related to QTBUG-124152

The fix is to run the shutdown logic in ~QQuickShaderEffectPrivate
directly from ~QQuickShaderEffect

Fixes: QTBUG-126396
Change-Id: Ie4c84c530a348a032bd535df294c6afe74a16a6d
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
(cherry picked from commit 33a969ac87be9a33426bc9e4a117d8111adcc8cd)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 3479b2ca5c963b411efcd43911989c4ea6043d8d)
(cherry picked from commit 8587b4fed6fdff63f90035423a5a5bd65323658b)